--- a/src/styles/_global.sass
+++ b/src/styles/_global.sass
@@ -13,7 +13,8 @@ body
 	font-size: $base-font-size
 	line-height: $gratio
 	overflow-x: hidden
-	padding: 1em
+	padding: 0
+	margin: 0
 
 a
 	color: $c-main
