--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -13,7 +13,7 @@ $font-family-serif: Georgia, Cambria, 'Times New Roman', Times, serif
 $font-family-monospace: Monaco, Menlo, Consolas, 'Courier New', monospace
 
 $font-family-base: $font-family-sans-serif
-$font-family-head: $font-family-serif
+$font-family-head: $font-family-sans-serif
 
 $base-font-size: 16px
 $fw-light: 300
