--- a/src/styles/comps/layout.sass
+++ b/src/styles/comps/layout.sass
@@ -1,8 +1,8 @@
 .layout
-	display: block
-	max-width: 45em
-	margin: $spacing auto
+	display: flex
+	flex-direction: column
+	height: 100vh
+	overflow: auto
 
-
-	+media($landscape)
-		padding: 0 60px
+	&-content
+		flex-grow: 1
