--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -24,7 +24,7 @@ $fw-bold: 700
 $em-base: $base-font-size
 
 // Colors
-$c-main: green
+$c-main: #D32F2F
 $c-comp: complement($c-main)
 $c-alt: #000
 
