--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -18,12 +18,12 @@ html(lang=manifest.lang)
 
 		link(rel='icon', type='image/png', href='images/icons/36x36.png', sizes='36x36')
 
-		link(rel='stylesheet', href='styles/#{buildstamp}index.css', media='screen')
-		link(rel='stylesheet', href='styles/#{buildstamp}print.css', media='print')
+		link(rel='stylesheet', href=`styles/${buildstamp}index.css`, media='screen')
+		link(rel='stylesheet', href=`styles/${buildstamp}print.css`, media='print')
 
 
 		//- Application init
-		script(src='scripts/#{buildstamp}App.js', defer)
+		script(src=`scripts/${buildstamp}App.js`, defer)
 
 	body
 		script.
